Nytt endepunkt for saksbehandlerflate som henter arbeidssokerperioder
Dette skal brukes for å populere historikk for saksbehandlerfalten til meldekort
